# workshop_data_quality

./: mkdocs.yml  pyproject.toml
app/: etl.py  function.py
docs/: index.md
tests/: test_func_hello_world.py
